# openclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.sandbox  README.md  UPSTREAM_SYNC.md  alfred.mjs  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/desktop-tauri/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: config.rs  docker.rs  gateway.rs  hardware.rs  lib.rs  main.rs  ollama.rs  services.rs  tray.rs  updater.rs
apps/desktop-tauri/src-tauri/src/commands/: agents.rs  gateway_cmd.rs  mod.rs  models.rs  onboarding.rs  privacy.rs  system.rs
docs/: architecture.md
extensions/bluebubbles/: channel.ts  package.json
extensions/discord/: channel.ts  package.json
extensions/matrix/: channel.ts  package.json
extensions/signal/: channel.ts  package.json
extensions/slack/: channel.ts  package.json
extensions/telegram/: channel.ts  package.json
extensions/webchat/: channel.ts  package.json
src/: index.ts
src/agents/: envelopes.ts  manager.ts  routing.ts  sandbox.ts  subagents.ts
src/channels/: manager.ts  router.ts
src/gateway/: auth.ts  cron.ts  health.ts  hooks.ts  protocol.ts  rpc.ts  server.ts
src/models/: anthropic.ts  failover.ts  lmstudio.ts  ollama.ts  openai.ts  provider.ts
src/skills/: executor.ts  index.ts  injector.ts  (+3 more)
(+188 files in other folders)
