[package]
name = "alfred-desktop"
version = "3.0.0"
edition = "2021"
description = "Alfred v3 Desktop Application"
authors = ["Archon"]
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sysinfo = "0.32"
dirs = "5"
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "alfred-desktop"
path = "src/main.rs"
